[package]
name = "cheese-shop"
version = "0.2.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"

[lib]
name = "CheeseShop"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.13.2"
#features = ["extension-module"]
extension-module = ["extension-module"]
default = ["extension-module"]
