[package]
name = "cheese-shop"
version = "0.2.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"

[lib]
name = "CheeseShop"
crate-type = ["cdylib"]



[dependencies.pyo3]
version = "0.19.2"
#features = ["macros"]
#features = ["macros", "extension-module"]
features = ["extension-module"]
